service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board
  namespace: app
spec:
  selector:
    app: board
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
